--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^1.0.3
   flutter_svg: ^1.0.0
+  google_fonts: ^2.2.0
   http: ^0.13.4
   intl: ^0.17.0
   shared_preferences: ^2.0.12
