--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   auto_route: ^3.2.1
+  cloud_firestore: ^3.1.6
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.11.0
+  firebase_storage: ^10.2.5
   flutter:
     sdk: flutter
   flutter_riverpod: ^1.0.3
@@ -23,10 +27,11 @@ dependencies:
   google_fonts: ^2.2.0
   http: ^0.13.4
   intl: ^0.17.0
+  logger: ^1.1.0
   shared_preferences: ^2.0.12
 
 dev_dependencies:
-  auto_route: ^3.2.1
+  auto_route_generator: ^3.2.1
   build_runner: ^2.1.7
   flutter_lints: ^1.0.0
   flutter_test:
