--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   auto_route: ^3.2.1
   cloud_firestore: ^3.1.6
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
   firebase_auth: ^3.3.5
   firebase_core: ^1.11.0
   firebase_storage: ^10.2.5
@@ -28,6 +29,7 @@ dependencies:
   http: ^0.13.4
   intl: ^0.17.0
   logger: ^1.1.0
+  meta: ^1.7.0
   shared_preferences: ^2.0.12
 
 dev_dependencies:
