--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  alert_dialogs:
+    git:
+      url: https://github.com/bizz84/codewithandrea_flutter_packages
+      path: packages/alert_dialogs
   auto_route: ^3.2.1
   cloud_firestore: ^3.1.6
   cupertino_icons: ^1.0.2
